Предрелизная сборка v 0.9.94 (Мелкие изменения, два товара в слайдер, избавление от лишних букв страница товара, скролл ту топ при loading.js)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,7 +40,7 @@ body {
   font-family: var(--font-family);
   color: var(--font-color);
 
-  scroll-behavior: smooth;
+  scroll-behavior: smooth !important;
 }
 
 section {
