Предрелизная сборка v 0.9.98 (Добавить в корзину на странице результатов)

--- a/src/app/header.css
+++ b/src/app/header.css
@@ -655,7 +655,7 @@ p.sku {
     background-color: #ff00002b;
     opacity: 0;
     animation: fadeIn 0.5s forwards;
-    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 
